# coriolix_playback

./: .gitignore  README.md  config_template.yaml  example_config.yaml  pyproject.toml  test_raw_data_config.yaml
.github/: copilot-instructions.md
data/: .gitkeep  playback_taani.yaml  test_config.yaml
tests/: conftest.py  test_advanced_streaming.py  test_cli.py  test_config.py  test_socket_streamer.py  test_timeseries_reader.py
timeseries_data_reader/: __init__.py  cli.py  config.py  timeseries_reader.py
